# debug-wasmtime-concurrency

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: app.rs  bindings.rs  lib.rs
crates/app/tests/: concurrency.rs
crates/component/: Cargo.toml
crates/component/src/: lib.rs
crates/component/wit/: world.wit
